<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_height">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/esztergom" />

        <View
            android:id="@+id/gradient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_darker" />

        <TextView
            android:id="@+id/layoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="@font/cinzel"
            android:text="@string/history_line1"
            android:textColor="@color/textColor"
            android:textSize="@dimen/title_text" />

        <TextView
            android:id="@+id/layoutName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutName"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/cinzel"
            android:text="@string/history_line2"
            android:textColor="@color/textColor"
            android:textSize="@dimen/title_text" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <TextView
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/history"
            android:layout_gravity="fill"
            android:textSize="@dimen/text_size_small"
            android:paddingBottom="@dimen/padding"/>
    </ScrollView>
</LinearLayout>